remove fixed location of scrollbar

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -79,6 +79,3 @@
 * {
     scrollbar-color: var(--color-scrollbar-thumb) transparent;
 }
-html, body {
-    scrollbar-gutter: stable;
-}
